--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,94 @@
+:root {
+  --nb-button-radius: 8px;
+  --nb-card-radius: 8px;
+  --nb-base-100: #ffffff;
+  --nb-base-200: #f5f5f5;
+  --nb-base-300: #eeeeee;
+  --nb-base-content: #1f1f1f;
+  --nb-accent: #646cff;
+  --nb-accent-light: #6d74ff;
+  --nb-accent-content: #f5f5f5;
+}
+
+/* Icon */
+
+.nb-icon {
+  mask-repeat: none;
+  mask-size: 100% 100%;
+  width: 1rem;
+  height: 1rem;
+  background-color: currentcolor;
+}
+
+/* Card */
+
+.nb-card {
+  display: flex;
+  background-color: var(--nb-base-100);
+  color: var(--nb-base-content);
+  border-radius: var(--nb-card-radius);
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+/* Button */
+
+.nb-button {
+  border-radius: var(--nb-button-radius);
+  border: 1px solid transparent;
+  padding: 0.6rem 1.2rem;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: inherit;
+  color: var(--nb-base-content);
+  background-color: var(--nb-base-200);
+  transition: border-color 180ms;
+  transition: background-color 180ms;
+  cursor: pointer;
+}
+
+.nb-button:hover {
+  background-color: var(--nb-base-300);
+}
+
+.nb-button.nb-button-accent {
+  color: var(--nb-accent-content);
+  background-color: var(--nb-accent);
+}
+
+.nb-button.nb-button-accent:hover {
+  background-color: var(--nb-accent-light);
+}
+
+/* CardButton */
+
+.nb-button.nb-button-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding: 1rem;
+  padding-left: 1.5rem;
+}
+
+.nb-button.nb-button-card .nb-button-card__content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  gap: 0.5rem;
+  text-align: left;
+}
+
+.nb-button.nb-button-card .nb-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.nb-button.nb-button-card .nb-button-card__title {
+  font-size: 1.5rem;
+}
+
+.nb-button.nb-button-card .nb-button-card__subtitle {
+  opacity: 0.8;
+}
 
