--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@
 .nb-button {
   border-radius: var(--nb-button-radius);
   border: 1px solid transparent;
-  padding: 0.6rem 1.2rem;
+  padding: 1rem 1.2rem;
   font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
@@ -45,6 +45,10 @@
   transition: border-color 180ms;
   transition: background-color 180ms;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .nb-button:hover {
@@ -60,7 +64,7 @@
   background-color: var(--nb-accent-light);
 }
 
-/* CardButton */
+/* ButtonCard */
 
 .nb-button.nb-button-card {
   display: flex;
