--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,12 @@
   --nb-base-200: #f5f5f5;
   --nb-base-300: #eeeeee;
   --nb-base-content: #1f1f1f;
-  --nb-accent: #646cff;
-  --nb-accent-light: #6d74ff;
-  --nb-accent-content: #f5f5f5;
+  --nb-primary: #646cff;
+  --nb-primary-light: #6d74ff;
+  --nb-primary-content: #f5f5f5;
+  --nb-secondary: #021431;
+  --nb-secondary-light: #2b3442;
+  --nb-secondary-content: #f5f5f5;
 }
 
 /* Icon */
@@ -15,8 +18,8 @@
 .nb-icon {
   mask-repeat: none;
   mask-size: 100% 100%;
-  width: 1rem;
-  height: 1rem;
+  width: 1.3rem;
+  height: 1.3rem;
   background-color: currentcolor;
 }
 
@@ -28,7 +31,17 @@
   color: var(--nb-base-content);
   border-radius: var(--nb-card-radius);
   flex-direction: column;
+  padding: 1rem;
   gap: 0.5rem;
+}
+
+.nb-card .nb-card__header {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  padding: 1rem 0;
+  gap: 0.25rem;
+  margin: 0 auto;
 }
 
 /* Button */
@@ -48,20 +61,44 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
   gap: 0.5rem;
+}
+
+.nb-button[disabled] {
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 .nb-button:hover {
   background-color: var(--nb-base-300);
 }
 
-.nb-button.nb-button-accent {
-  color: var(--nb-accent-content);
-  background-color: var(--nb-accent);
+.nb-button.nb-button-primary {
+  color: var(--nb-primary-content);
+  background-color: var(--nb-primary);
 }
 
-.nb-button.nb-button-accent:hover {
-  background-color: var(--nb-accent-light);
+.nb-button.nb-button-primary:hover {
+  background-color: var(--nb-primary-light);
+}
+
+.nb-button.nb-button-secondary {
+  color: var(--nb-secondary-content);
+  background-color: var(--nb-secondary);
+}
+
+.nb-button.nb-button-secondary:hover {
+  background-color: var(--nb-secondary-light);
+}
+
+.nb-button.nb-button-link {
+  display: inline;
+  color: var(--nb-primary);
+  background-color: transparent;
+  text-decoration: underline;
+  font-size: inherit;
+  padding: 0;
 }
 
 /* ButtonCard */
@@ -94,5 +131,51 @@
 
 .nb-button.nb-button-card .nb-button-card__subtitle {
   opacity: 0.8;
+}
+
+/* Typography */
+
+.nb-title {
+  margin: 0;
+  font-size: 2rem;
+}
+
+.nb-subtitle {
+  margin: 0;
+  font-size: 0.9rem;
+}
+
+.nb-text {
+  font-size: 1rem;
+}
+
+.nb-small {
+  font-size: 0.9rem;
+}
+
+/* Link */
+
+.nb-link {
+  cursor: pointer;
+  display: inline;
+  color: var(--nb-primary);
+  background-color: transparent;
+  text-decoration: underline;
+  padding: 0;
+}
+
+/* Utilities */
+
+.nb-spin {
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
