--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   --nb-button-radius: 8px;
+  --nb-input-radius: 8px;
   --nb-card-radius: 8px;
   --nb-base-100: #ffffff;
   --nb-base-200: #f5f5f5;
@@ -23,6 +24,11 @@
   background-color: currentcolor;
 }
 
+.nb-icon--clickable {
+  cursor: pointer;
+  color: var(--nb-primary);
+}
+
 /* Card */
 
 .nb-card {
@@ -42,6 +48,12 @@
   padding: 1rem 0;
   gap: 0.25rem;
   margin: 0 auto;
+}
+
+.nb-card .nb-card__footer {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
 }
 
 /* Button */
@@ -92,13 +104,14 @@
   background-color: var(--nb-secondary-light);
 }
 
-.nb-button.nb-button-link {
+.nb-button.nb-button-inline {
   display: inline;
+  padding: 0;
+}
+
+.nb-button.nb-button-link {
   color: var(--nb-primary);
   background-color: transparent;
-  text-decoration: underline;
-  font-size: inherit;
-  padding: 0;
 }
 
 /* ButtonCard */
@@ -138,11 +151,13 @@
 .nb-title {
   margin: 0;
   font-size: 2rem;
+  text-align: center;
 }
 
 .nb-subtitle {
   margin: 0;
   font-size: 0.9rem;
+  text-align: center;
 }
 
 .nb-text {
@@ -164,7 +179,146 @@
   padding: 0;
 }
 
+/* Forms */
+
+.nb-field {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 0.25rem;
+}
+
+.nb-label {
+  display: flex;
+  font-weight: 600;
+}
+
+.nb-input-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.nb-input-wrapper__content {
+  display: flex;
+  flex-grow: 1;
+}
+
+.nb-input-wrapper__content .nb-input {
+  flex-grow: 1;
+}
+
+.nb-input-wrapper__before {
+  width: 1rem;
+  margin-right: -2rem;
+  padding-left: 1rem;
+}
+
+.nb-input-wrapper__after {
+  width: 1rem;
+  margin-left: -2rem;
+  padding-right: 1rem;
+}
+
+.nb-input-wrapper.nb-input-wrapper--before .nb-input {
+  padding-left: 3rem;
+}
+
+.nb-input-wrapper.nb-input-wrapper--after .nb-input {
+  padding-right: 3rem;
+}
+
+.nb-input {
+  display: flex;
+  border-radius: var(--nb-input-radius);
+  border: 1px solid var(--nb-base-300);
+  padding: 1rem 1.2rem;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: inherit;
+  color: var(--nb-base-content);
+  background-color: var(--nb-base-100);
+  display: flex;
+  align-items: center;
+}
+
+/* QRCode */
+
+.nb-qrcode {
+  display: flex;
+  border: 1px solid transparent;
+  padding: 0;
+  background-color: var(--nb-base-100);
+  cursor: pointer;
+}
+
+/* Scanner */
+
+.nb-scanner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nb-scanner .nb-scanner__loading,
+.nb-scanner .nb-scanner__error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  opacity: 0.5;
+  padding: 4rem 0;
+}
+
+.nb-scanner .nb-scanner__video {
+  border-radius: var(--nb-card-radius);
+}
+
+.nb-scanner:not(.nb-scanner--loading) .nb-scanner__loading {
+  display: none;
+}
+
+.nb-scanner.nb-scanner--loading .nb-scanner__video {
+  display: none;
+}
+
 /* Utilities */
+
+.nb-row {
+  display: flex;
+}
+
+.nb-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.nb-align-center {
+  align-items: center;
+}
+
+.nb-justify-center {
+  justify-content: center;
+}
+
+.nb-text-center {
+  text-align: center;
+}
+
+.nb-faded {
+  opacity: 0.75;
+}
+
+.nb-gap-1 {
+  gap: 0.25rem;
+}
+
+.nb-gap-2 {
+  gap: 0.5rem;
+}
+
+.nb-gap-4 {
+  gap: 1rem;
+}
 
 .nb-spin {
   animation: spin 2s linear infinite;
