--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@
   --nb-secondary: #021431;
   --nb-secondary-light: #2b3442;
   --nb-secondary-content: #f5f5f5;
+  --nb-danger: #dd0000;
 }
 
 /* Icon */
@@ -241,6 +242,67 @@
   align-items: center;
 }
 
+.nb-textarea {
+  display: flex;
+  border-radius: var(--nb-input-radius);
+  border: 1px solid var(--nb-base-300);
+  padding: 1rem 1.2rem;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: inherit;
+  color: var(--nb-base-content);
+  background-color: var(--nb-base-100);
+  resize: vertical;
+  min-height: 5rem;
+}
+
+.nb-avatar-input__label {
+  position: relative;
+  display: flex;
+  width: 6rem;
+  height: 6rem;
+  flex-shrink: 0;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3rem;
+  border: 2px solid var(--nb-base-content);
+  background-position: center;
+  background-color: var(--nb-base-200);
+  background-size: contain;
+}
+
+.nb-avatar-input__label--empty {
+}
+
+.nb-avatar-input__label--active {
+  border: 1px solid var(--nb-primary);
+}
+
+.nb-avatar-input__button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 1.25rem;
+  width: 1.25rem;
+  overflow: hidden;
+  border-radius: 100%;
+  border: 1px solid transparent;
+  background-color: var(--nb-primary);
+  color: var(--nb-primary-content);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nb-avatar-input__button--danger {
+  background-color: var(--nb-danger);
+}
+
+.nb-avatar-input__button--primary {
+  background-color: var(--nb-primary);
+}
+
 /* QRCode */
 
 .nb-qrcode {
@@ -292,7 +354,7 @@
   flex-direction: column;
 }
 
-.nb-align-center {
+.nb-items-center {
   align-items: center;
 }
 
@@ -318,6 +380,10 @@
 
 .nb-gap-4 {
   gap: 1rem;
+}
+
+.nb-hidden {
+  display: none;
 }
 
 .nb-spin {
