--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,10 @@
   --nb-base-300: #eeeeee;
   --nb-base-content: #1f1f1f;
   --nb-primary: #646cff;
-  --nb-primary-light: #6d74ff;
+  --nb-primary-alt: #6d74ff;
   --nb-primary-content: #f5f5f5;
   --nb-secondary: #021431;
-  --nb-secondary-light: #2b3442;
+  --nb-secondary-alt: #2b3442;
   --nb-secondary-content: #f5f5f5;
   --nb-danger: #dd0000;
 }
@@ -93,7 +93,7 @@
 }
 
 .nb-button.nb-button-primary:hover {
-  background-color: var(--nb-primary-light);
+  background-color: var(--nb-primary-alt);
 }
 
 .nb-button.nb-button-secondary {
@@ -102,7 +102,7 @@
 }
 
 .nb-button.nb-button-secondary:hover {
-  background-color: var(--nb-secondary-light);
+  background-color: var(--nb-secondary-alt);
 }
 
 .nb-button.nb-button-inline {
